run intellij code cleanup and fix easy errors, part one